--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,8 @@
 {
   "name": "garduccidetail",
   "version": "0.0.1",
-  "description": "Health Manager System",
-  "main": "index.html",
+  "description": "Garducci Detail webpage",
+  "main": "/views/index.html",
   "scripts": {
     "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +18,7 @@
     "connect": "^3.6.6",
     "express": "^4.16.3",
     "nodemailer": "^4.6.4",
+    "path": "^0.12.7",
     "serve-static": "^1.13.2"
   }
 }
