--- a/server/package.json
+++ b/server/package.json
@@ -20,5 +20,15 @@
     "nodemailer": "^4.6.4",
     "path": "^0.12.7",
     "serve-static": "^1.13.2"
-  }
+  },
+  "engines": {
+      "node" : "9.6.1"
+  },
+  "bugs": {
+    "url": "https://github.com/mahgarducci/garduccidetail/issues"
+  },
+  "homepage": "https://github.com/mahgarducci/garduccidetail#readme",
+  "devDependencies": {},
+  "author": "Marcus Garducci",
+  "license": "ISC"
 }
